fixing readability in darkmode

--- a/ruter.css
+++ b/ruter.css
@@ -15,6 +15,7 @@ button{
 .listView{
     display: flex;
     justify-content: center;
+    color: var(--secondaryColor);
 }
 
 /* footer */
